argocd/apps/linkding/linkding-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
      - name: linkding
        image: sissbruecker/linkding:1.41.0
        ports:
          - containerPort: 9090
