argocd/apps/linkding/linkding-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
spec:
  selector:
    app: linkding
  ports:
  - name: http
    targetPort: 9090
    port: 80
