argocd/apps/linkding/linkding-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  rules:
  - host: linkding.greyroom.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  linkding
            port:
              number: 80
  tls:
  - secretName: linkding-certificates-greyroom-net-production # <=== Use the name defined in Certificate resource.
